# zorix_agent

./: .env.example  .gitignore  API_DOCUMENTATION.md  CENTRALIZED_PORT_SETUP_COMPLETE.md  CENTRAL_CONFIG.py  CLI_QUICK_START.md  CLI_README.md  DEPLOYMENT.md  DOCUMENTATION_INDEX.md  Dockerfile  HOW_TO_USE.md  HOW_TO_USE_YOUR_AGENT.md  IMMEDIATE_NEXT_STEPS.md  Makefile  PORT_CONFIG.py  PORT_CONFIGURATION_README.md  QUICK_START.md  README.md  USER_GUIDE.md  ZORIX_CLI_COMPLETE_GUIDE.md  chat_interface.html  chat_with_ai.py  compose.yaml  docker-compose.prod.yml  docker-compose.yml  env.example  main.py  pyproject.toml  requirements.txt  run_server.py  run_simple.py  run_web.py  simple_start.py  start.py  start_with_ai.py  start_zorix.py  test_all_fixes.py  test_aws.py  test_basic.py  test_bedrock_integration.py  (+16 more)
agent/: __init__.py  api.py  config.py  orchestrator.py
agent/adapters/: __init__.py  agentcore_entrypoint.py  gateway_tools.py
agent/api/: __init__.py  app.py  middleware.py
agent/api/routes/: __init__.py  agent.py  chat.py  git.py  health.py  index.py  search.py
agent/cli/: __init__.py  config.py  main.py
agent/llm/: __init__.py  bedrock_client.py  exceptions.py  orchestrator.py  schemas.py  tool_calling.py
agent/memory/: __init__.py  conversation.py  models.py  project.py  provider.py  schema.py  session.py
agent/models/: __init__.py  api.py  base.py  centralized.py  plan.py
agent/observability/: __init__.py  audit.py  logging.py  metrics.py  tracing.py
agent/orchestrator/: __init__.py  core.py  executor.py  planner.py  state.py
agent/planning/: __init__.py  cost_estimator.py  executor.py  modes.py  planner.py  preview.py
agent/security/: __init__.py  exceptions.py  path_utils.py  sandbox.py
agent/telemetry/: __init__.py
agent/tools/: __init__.py  command.py  filesystem.py  git.py
agent/vector/: __init__.py  chunking.py  index.py  search.py
agent/web/: README.md  __init__.py  api.py  models.py  streaming.py
agent/web/routes/: __init__.py  chat.py  files.py  projects.py  search.py  tasks.py
agent/web/static/: index.html
cli/: __init__.py  zorix_cli.py
config/: prometheus.yml
config/grafana/dashboards/: dashboard.yml
config/grafana/datasources/: prometheus.yml
config/nginx/: nginx.conf  nginx.prod.conf
docker/: Dockerfile  docker-compose.yml
infra/docker/: .gitkeep  agent.Dockerfile
k8s/: configmap.yaml  deployment.yaml  namespace.yaml  pvc.yaml  secret.yaml  service.yaml
scripts/: .gitkeep  build.sh  deploy-k8s.sh  deploy.sh  dev.sh  index_rebuild.sh  init-db.sql  setup-dev.sh
tests/: test_bedrock_client.py  test_cli.py  test_command_tools.py  test_filesystem_tools.py  test_git_tools.py  test_memory_system.py  test_models.py  test_observability.py  test_orchestrator.py  test_path_utils.py  test_planning.py  test_schemas.py  test_security.py  test_streaming.py  test_tool_calling.py  test_vector_index.py
